2007-07-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 408: Applied the AVT patch from Mark Munte (with small extra
	           cosmetic changes)

2007-06-24 David Moore  <dcm@acm.org>
	* SVN 407: Applied modified version of Kristian Høgsberg's patch to
	           bring Juju support up to date with kernel 2.6.22.

2007-06-19 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 406: added missing checksum.c/h. Thanks to Robert Harle.
	* SVN 405: - update feature detection rules. Explanation written in
	             control.c.
	           - Member one_push renamed to one_push_capable as it is a
		     capability.
		   - Fixed typo in error message

2007-06-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 404: fixed missing * in dc1394_format7_get_byte_per_packet
	           (thanks to Stian Skjelstad)

2007-06-14 Mikael Olenfalk <mikael.olenfalk@gmail.com>
	* SVN 403: Damien forgot to add the new files...
	* SVN 402: - added Basler Smart Feature Framework support
	           - vendor/basler.[ch]: the entry functions for Basler SFF
	             support
	           - vendor/basler_sff.h: types used for SFF
	           - vendor/basler_sff_registry.[ch]: internal functions and
     	             types for implemented SFF functionality

2007-06-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 401: Solved juju include problems (capture.h does not exist).
	           Version 2.0.0-rc7. 
	* SVN 400: Include juju directory in the package. Thanks to Desmond for
	           spotting this.

2007-06-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 399: Forgot to change some version numbers. This is 2.0.0-rc6.
	* SVN 398: Version 2.0.0-rc6
	
2007-06-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 397: get optional function registers only if the IIDC version is
	           > 1.30 (not >= 1.30). Thanks to Etienne Bieber.
	
2007-05-08 Damien Douxchamps http://damien.douxchamps.net/